Building HTML Structure

--- a/index.html
+++ b/index.html
@@ -6,6 +6,49 @@
     <title>Página de Receita</title>
 </head>
 <body>
-    
+    <div id="page">
+        <img src="" alt=""> 
+        <main>
+            <section id="about">
+                <h1>Coffe Cupcake with chantilly</h1>
+                <p>
+                    The perfect little cake to enjoy with your daily coffee. It's super easy to make and turns out amazing — it's sure to impress. Give it a try and let me know what you think!
+                </p>
+
+                <p>
+                    Time: 1h10 <br>
+                    Yield: 12 servings <br> 
+                    Difficulty: easy
+                </p>
+            </section>  
+            <section id="ingredients"></section>
+            <h2>Ingredients</h2>
+            <ul>
+            <li>1 1/2 cups of warm water</li>
+            <li>1 tablespoon of instant coffee</li>
+            <li>3 eggs</li>
+            <li>1/2 cup of oil</li>
+            <li>2 cups of sugar</li>
+            <li>2/3 cup of cocoa powder</li>
+            <li>2 1/2 cups of all-purpose flour</li>
+            <li>1 tablespoon of baking powder</li>
+            <li>2 cups of ready-made whipped cream</li>
+            <li>Coffee beans for decoration</li>
+            <li>1 can of sweetened condensed milk</li>
+            <li>1 tablespoon of instant coffee</li>
+            <li>1 tablespoon of cocoa powder</li>
+            <li>2 tablespoons of butter</li>
+            </ul>
+            <section id="How to Make it"></section>
+            <h2>How to Make It</h2>
+            <p>
+                In a blender, blend the water, instant coffee, eggs, oil, sugar, and cocoa powder until smooth. Transfer the mixture to a bowl, add the flour and baking powder, and mix with a spoon. Pour the batter into cupcake liners placed in a large baking tray, side by side. Bake in a preheated medium oven for about 25 minutes or until baked through and golden. Remove and let cool.<br>
+
+                For the filling, place all the ingredients in a saucepan over medium heat, stirring constantly until thickened. Remove from heat, let cool, and transfer to a piping bag fitted with a round tip. Set aside. Place the whipped cream in another piping bag fitted with a star tip and set aside.<br><br>
+
+                To assemble, make a hole in the center of each cupcake and fill with the reserved coffee brigadeiro. Decorate the tops of the cupcakes with the reserved whipped cream, piping in circular motions. Garnish with coffee beans and refrigerate until ready to serve.
+            </p>
+        </main>
+    </div>
 </body>
 </html>
