--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div id="page">
         <img src="assets/main-image.jpg" alt="Image of a cupcake with coffee beans and whipped cream"> 
-        
+
         <main>
             <section id="about">
                 <h1>Coffe Cupcake with chantilly</h1>
@@ -28,7 +28,7 @@
                     Difficulty: easy
                 </p>
             </section>  
-            <section id="ingredients"></section>
+            <section id="ingredients">
             <h2>Ingredients</h2>
             <ul>
             <li>1 1/2 cups of warm water</li>
@@ -46,7 +46,8 @@
             <li>1 tablespoon of cocoa powder</li>
             <li>2 tablespoons of butter</li>
             </ul>
-            <section id="How to Make it"></section>
+            </section>
+            <section id="How to Make it">
             <h2>How to Make It</h2>
             <p>
                 In a blender, blend the water, instant coffee, eggs, oil, sugar, and cocoa powder until smooth. Transfer the mixture to a bowl, add the flour and baking powder, and mix with a spoon. Pour the batter into cupcake liners placed in a large baking tray, side by side. Bake in a preheated medium oven for about 25 minutes or until baked through and golden. Remove and let cool.<br>
@@ -55,7 +56,11 @@
 
                 To assemble, make a hole in the center of each cupcake and fill with the reserved coffee brigadeiro. Decorate the tops of the cupcakes with the reserved whipped cream, piping in circular motions. Garnish with coffee beans and refrigerate until ready to serve.
             </p>
+            </section>
         </main>
     </div>
+    <footer>
+        Enjoy your CupCake with Coffe
+    </footer>
 </body>
 </html>
